--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ ul {
 
 <!-- SNET -->
 <tr>
-<td width="25%" valign="top"><p><img src="figures/snet.PNG" alt="" style="border-style: none" width="250" align="top"></p></td>
+<td width="25%" valign="top"><p><img src="figures/snet.png" alt="" style="border-style: none" width="250" align="top"></p></td>
 <td width="75%" valign="top">
 <p class="padding">
 <b>sEMG based Tremor Severity Evaluation for Parkinson's Disease using a Light-weight CNN</b><br>
