--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@ ul {
 <tr>
 <td width="25%" valign="top"><p><img src="figures/keto.gif" alt="" style="border-style: none" width="250" align="top"></p></td>
 <td width="75%" valign="top">
-<p class="padding">
+<p class="padding"><font face="Verdana">
 <b>KETO: Learning Keypoint Representations for Tool Manipulation</b><br>
 <b>Zengyi Qin</b>, Kuan Fang, Yuke Zhu, Li Fei-Fei and Silvio Savarese<br>
 <i>The International Conference on Robotics and Automation (ICRA), 2020</i><br>
 </p>
-<p class="padding">KETO is a framework for robots to manipulate unseen objects as tools to complete diverse tasks. We proposed a method to learn the keypoint representations of objects, which simplify the manipulation task and improve the generality to novel objects.
+<p class="padding"><font face="Verdana">KETO is a framework for robots to manipulate unseen objects as tools to complete diverse tasks. We proposed a method to learn the keypoint representations of objects, which simplify the manipulation task and improve the generality to novel objects.
 </p>
-<p class="padding">
+<p class="padding"><font face="Verdana">
 <a href="https://arxiv.org/abs/1910.11977">paper</a> | <a href="https://www.youtube.com/watch?v=hP2h53BHxE8">video</a> | <a href="https://sites.google.com/view/ke-to">website</a>
 </p></td>
 </tr>
@@ -94,14 +94,14 @@ ul {
 <tr>
 <td width="25%" valign="top"><p><img src="figures/tlnet.jpg" alt="" style="border-style: none" width="250" align="top"></p></td>
 <td width="75%" valign="top">
-<p class="padding">
+<p class="padding"><font face="Verdana">
 <b>Triangulation Learning Network: from Monocular to Stereo 3D Object Detection</b><br>
 <b>Zengyi Qin</b>, Jinglu Wang and Yan Lu<br>
 <i>International Conference on Computer Vision and Pattern Recognition (CVPR), 2019</i><br>
 </p>
-<p class="padding">This is a pioneering work on stereo image based 3D object detection without calculating the pixel-level depth maps. We proposed a triangulation learning method to learn the object-level stereo geometric correspondence for 3D object detection.
+<p class="padding"><font face="Verdana">This is a pioneering work on stereo image based 3D object detection without calculating the pixel-level depth maps. We proposed a triangulation learning method to learn the object-level stereo geometric correspondence for 3D object detection.
 </p>
-<p class="padding">
+<p class="padding"><font face="Verdana">
 <a href="https://arxiv.org/abs/1906.01193">paper</a> | <a href="https://youtu.be/zcOXA83Uq8M">video</a> | <a href="https://github.com/Zengyi-Qin/TLNet">code</a>
 </p></td>
 </tr>
@@ -111,14 +111,14 @@ ul {
 <tr>
 <td width="25%" valign="top"><p><img src="figures/monogrnet.gif" alt="" style="border-style: none" width="250" align="top"></p></td>
 <td width="75%" valign="top">
-<p class="padding">
+<p class="padding"><font face="Verdana">
 <b>MonoGRNet: A Geometric Reasoning Network for Monocular 3D Object Localization</b><br>
 <b>Zengyi Qin</b>, Jinglu Wang and Yan Lu<br>
 <i>The Thirty-Third AAAI Conference on Artificial Intelligence (AAAI), 2019, <b>Oral Presentation, Acceptance Rate < 8% </b> </i><br>
 </p>
-<p class="padding">A state-of-the-art monocular 3D object detection approach based on geometric reasoning. We proposed to decompose the whole task into four progressive sub-tasks that significantly facilitates the monocular 3D object detection.
+<p class="padding"><font face="Verdana">A state-of-the-art monocular 3D object detection approach based on geometric reasoning. We proposed to decompose the whole task into four progressive sub-tasks that significantly facilitates the monocular 3D object detection.
 </p>
-<p class="padding">
+<p class="padding"><font face="Verdana">
 <a href="https://arxiv.org/abs/1811.10247">paper</a> | <a href="https://youtu.be/BJ1I56kxdk0">video</a> | <a href="https://github.com/Zengyi-Qin/MonoGRNet">code</a>
 </p></td>
 </tr>
@@ -128,14 +128,14 @@ ul {
 <tr>
 <td width="25%" valign="top"><p><img src="figures/snet.png" alt="" style="border-style: none" width="250" align="top"></p></td>
 <td width="75%" valign="top">
-<p class="padding">
+<p class="padding"><font face="Verdana">
 <b>sEMG based Tremor Severity Evaluation for Parkinson's Disease using a Light-weight CNN</b><br>
 <b>Zengyi Qin<top>*</top></b>, Zhenyu Jiang<top>*</top>, Jiansheng Chen, Chunhua Hu and Yu Ma<br>
 <i>IEEE Signal Processing Letters (SPL), 2019</i><br>
 </p>
-<p class="padding">A machine learning framework to assist the diagnosis of Parkinson's Disease by assessing the pathological tremor. We proposed a light-weight convolutional neural network and a similarity learning strategy to handle the scarcity of medical data.
+<p class="padding"><font face="Verdana">A machine learning framework to assist the diagnosis of Parkinson's Disease by assessing the pathological tremor. We proposed a light-weight convolutional neural network and a similarity learning strategy to handle the scarcity of medical data.
 </p>
-<p class="padding">
+<p class="padding"><font face="Verdana">
 <a href="https://ieeexplore.ieee.org/document/8661631">paper</a>
 </p></td>
 </tr>
