--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ ul {
 
 
 <div class="section">
-<h3>Activities</h3>
+<h3><font face="Verdana">Activities</h3>
 <p><font face="Verdana">
 <ul>
 <li>2020/02, I will join Massachusetts Institute of Technology as a graduate student starting from Fall 2020.</li>
@@ -70,7 +70,7 @@ ul {
 
 
 <div class="section">
-<h3>Publications</h3>
+<h3><font face="Verdana">Publications</h3>
 <table width="100%">
 
 <!-- KETO -->
@@ -146,7 +146,7 @@ ul {
 
 
 <div class="section">
-<h3>Education</h3>
+<h3><font face="Verdana">Education</h3>
 <p><font face="Verdana">
 <ul>
 <li>Tsinghua University, 2016 - 2020 <br>Bachelor of Engineer, Electronic Engineering <br> Advisor: Professor Jiansheng Chen</li>
@@ -155,7 +155,7 @@ ul {
 </div>
 
 <div class="section">
-<h3>Honors</h3>
+<h3><font face="Verdana">Honors</h3>
 <p><font face="Verdana">
 <ul>
 <li>The Award of Excellence in Microsoft Research Internship, 2019</li>
