--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ ul {
 </style>
 <meta content="en-us" http-equiv="Content-Language">
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+<meta name="msvalidate.01" content="F09EB454EEBF59AD68CB64C1A341AA9A" />
 <title>Zengyi Qin - Tsinghua University</title>
 <meta charset="utf-8">
 </head>
