--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ ul {
 .section {max-width:1024px}
 </style>
 <meta name="msvalidate.01" content="F09EB454EEBF59AD68CB64C1A341AA9A" />
+<meta name="baidu-site-verification" content="Ctys5yXPkU" />
 <title>Zengyi Qin - Tsinghua University</title>
 <meta charset="utf-8">
 </head>
