--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ ul {
 <p class="padding"><font face="Verdana">
 <b>Triangulation Learning Network: from Monocular to Stereo 3D Object Detection</b><br>
 <b>Zengyi Qin</b>, Jinglu Wang and Yan Lu<br>
-<i>International Conference on Computer Vision and Pattern Recognition (CVPR), 2019</i><br>
+<i>The International Conference on Computer Vision and Pattern Recognition (CVPR), 2019</i><br>
 </p>
 <p class="padding"><font face="Verdana">This is a pioneering work on stereo image based 3D object detection without calculating the pixel-level depth maps. We proposed a triangulation learning method to learn the object-level stereo geometric correspondence for 3D object detection.
 </p>
