--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ ul {
 </style>
 <meta name="msvalidate.01" content="F09EB454EEBF59AD68CB64C1A341AA9A" />
 <meta name="baidu-site-verification" content="Ctys5yXPkU" />
+<meta name="google-site-verification" content="9qnP6wIE8rh3TwMVrb84fWPqg9A_nDYEL3D6NGDjpwU" />
 <title>Zengyi Qin - Tsinghua University</title>
 <meta charset="utf-8">
 </head>
