--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ ul {
 <p class="padding"><font face="Verdana">This is a pioneering work on stereo image based 3D object detection without calculating the pixel-level depth maps. We proposed a triangulation learning method to learn the object-level stereo geometric correspondence for 3D object detection.
 </p>
 <p class="padding"><font face="Verdana">
-<a href="https://arxiv.org/abs/1906.01193">paper</a> | <a href="https://youtu.be/zcOXA83Uq8M">video</a> | <a href="https://github.com/Zengyi-Qin/TLNet">code</a>
+<a href="https://arxiv.org/abs/1906.01193">paper</a> | <a href="https://youtu.be/zcOXA83Uq8M">video</a> | <a href="https://github.com/Zengyi-Qin/TLNet">code</a> | <a href="https://sites.google.com/view/triangulation-learning">website</a>
 </p></td>
 </tr>
 <tr><td><br></td></tr>
@@ -121,7 +121,7 @@ ul {
 <p class="padding"><font face="Verdana">A state-of-the-art monocular 3D object detection approach based on geometric reasoning. We proposed to decompose the whole task into four progressive sub-tasks that significantly facilitates the monocular 3D object detection.
 </p>
 <p class="padding"><font face="Verdana">
-<a href="https://arxiv.org/abs/1811.10247">paper</a> | <a href="https://youtu.be/BJ1I56kxdk0">video</a> | <a href="https://github.com/Zengyi-Qin/MonoGRNet">code</a>
+<a href="https://arxiv.org/abs/1811.10247">paper</a> | <a href="https://youtu.be/BJ1I56kxdk0">video</a> | <a href="https://github.com/Zengyi-Qin/MonoGRNet">code</a> | <a href="https://sites.google.com/view/monogrnet">website</a>
 </p></td>
 </tr>
 <tr><td><br></td></tr>
@@ -138,7 +138,7 @@ ul {
 <p class="padding"><font face="Verdana">A machine learning framework to assist the diagnosis of Parkinson's Disease by assessing the pathological tremor. We proposed a light-weight convolutional neural network and a similarity learning strategy to handle the scarcity of medical data.
 </p>
 <p class="padding"><font face="Verdana">
-<a href="https://ieeexplore.ieee.org/document/8661631">paper</a>
+<a href="https://ieeexplore.ieee.org/document/8661631">paper</a> | <a href="https://sites.google.com/view/semg-tremor">website</a>
 </p></td>
 </tr>
 <tr><td><br></td></tr>
