--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ ul {
 <h3><font face="Verdana">Education</h3>
 <p><font face="Verdana">
 <ul>
-<li>Tsinghua University, 2016 - 2020 <br>Bachelor of Engineer, Electronic Engineering <br> Advisor: Professor Jiansheng Chen</li>
+<li>Tsinghua University, 2016 - 2020 <br>Bachelor of Engineering, Electronic Engineering <br> Advisor: Professor Jiansheng Chen</li>
 </ul>
 </font></p>
 </div>
