--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ ul {
 <font size="5" face="Verdana"><b>&nbsp;Zengyi Qin <span lang="zh-cn">秦增益</span></b></font>
 <p><font face="Verdana">&nbsp; Undergraduate Student</font></p>
 <p><font face="Verdana">&nbsp; Tsinghua University, Beijing, China</font></p>
-<p><font face="Verdana">&nbsp; qinzy16 [at] mails.tsinghua.edu.cn</font></p>
+<p><font face="Verdana">&nbsp; qinzy [at] mit.edu</font></p>
 </td>
 </tr>
 </table>
@@ -54,6 +54,11 @@ ul {
 
 <div class="section">
 <p><font face="Verdana">I am an undergraduate student of Electronic Engineering at Tsinghua University. I am passionate about 3D visual perception, robotic plannning and control, machine learning, as well as biomedical signal processing. I also have experience in the 3D perception system of self-driving vehicles.
+</font></p>
+</div>
+
+<div class="section">
+<p><font face="Verdana">I will join MIT as a graduate student starting from Fall 2020.
 </font></p>
 </div>
 
