--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@ ul {
 <td width="3%"></td>
 <td width="72%">
 <font size="5" face="Verdana"><b>&nbsp;Zengyi Qin <span lang="zh-cn">秦增益</span></b></font>
-<p><font face="Verdana">&nbsp; Undergraduate Student</font></p>
-<p><font face="Verdana">&nbsp; Tsinghua University, Beijing, China</font></p>
 <p><font face="Verdana">&nbsp; qinzy [at] mit.edu</font></p>
 </td>
 </tr>
@@ -53,15 +51,9 @@ ul {
 </div>
 
 <div class="section">
-<p><font face="Verdana">I am an undergraduate student of Electronic Engineering at Tsinghua University. I am passionate about 3D visual perception, robotic plannning and control, machine learning, as well as biomedical signal processing. I also have experience in the 3D perception system of self-driving vehicles.
+<p><font face="Verdana">I am an incoming graduate student at MIT. I obtained the B.E. degree of Electronic Engineering at Tsinghua University in 2020. I am passionate about safe and intelligent autonomous systems, as well as their intersection with robotics and machine learning. 
 </font></p>
 </div>
-
-<div class="section">
-<p><font face="Verdana">I will join MIT as a graduate student starting from Fall 2020.
-</font></p>
-</div>
-
 
 <div class="section">
 <h3><font face="Verdana">Activities</h3>
