--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ ul {
 </div>
 
 <div class="section">
-<p><font face="Verdana">I am an incoming graduate student at MIT. I obtained my B.E. degree of Electronic Engineering at Tsinghua University in 2020. I am passionate about safe and intelligent autonomous systems, as well as their intersection with robotics and machine learning. 
+<p><font face="Verdana">I am a first-year graduate student at MIT AeroAstro advised by Prof. Chuchu Fan. I obtained my B.E. degree of Electronic Engineering at Tsinghua University in 2020. I am passionate about safe and intelligent autonomous systems, as well as their intersection with robotics and machine learning. 
 </font></p>
 </div>
 
@@ -70,6 +70,7 @@ ul {
 <div class="section">
 <h3><font face="Verdana">Publications</h3>
 <table width="100%">
+  
 
 <!-- KETO -->
 <tr>
