--- a/index.html
+++ b/index.html
@@ -70,6 +70,40 @@ ul {
 <div class="section">
 <h3><font face="Verdana">Publications</h3>
 <table width="100%">
+
+
+<!-- MACBF -->
+<tr>
+  <td width="25%" valign="top"><p><img src="figures/macbf.gif" alt="" style="border-style: none" width="250" align="top"></p></td>
+  <td width="75%" valign="top">
+  <p class="padding"><font face="Verdana">
+  <b>Learning Safe Multi-agent Control with Decentralized Neural Barrier Certificates</b><br>
+  <b>Zengyi Qin</b>, Kaiqing Zhang, Yuxiao Chen, Jingkai Chen and Chuchu Fan<br>
+  <i>The International Conference on Learning Representations (ICLR), 2021</i><br>
+  </p>
+  <p class="padding"><font face="Verdana">We study the multi-agent safe control problem where agents should avoid collisions to static obstacles and collisions with each other while reaching their goals. Our core idea is to learn the multi-agent control policy jointly with learning the control barrier functions as safety certificates.
+  </p>
+  <p class="padding"><font face="Verdana">
+  <a href="https://arxiv.org/abs/2101.05436">paper</a>
+  </p></td>
+  </tr>
+  <tr><td><br></td></tr>
+
+
+<!-- PDoctor -->
+<tr>
+  <td width="25%" valign="top"><p><img src="figures/pdoctor.PNG" alt="" style="border-style: none" width="250" align="top"></p></td>
+  <td width="75%" valign="top">
+  <p class="padding"><font face="Verdana">
+  <b>Learning fine-grained estimation of physiological states from coarse-grained labels by distribution restoration</b><br>
+  <b>Zengyi Qin</b>, Jiansheng Chen, Zhenyu Jiang, Xumin Yu, Chunhua Hu, Yu Ma, Suhua Miao and Rongsong Zhou<br>
+  <i> Scientific Reports, 2020</i><br>
+  </p>
+  <p class="padding"><font face="Verdana">
+  <a href="https://www.nature.com/articles/s41598-020-79007-5">paper</a>
+  </p></td>
+  </tr>
+  <tr><td><br></td></tr>
   
 
 <!-- KETO -->
