--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ ul {
 <meta name="baidu-site-verification" content="Ctys5yXPkU" />
 <meta name="google-site-verification" content="9qnP6wIE8rh3TwMVrb84fWPqg9A_nDYEL3D6NGDjpwU" />
 <meta name="keywords" content="Zengyi Qin, Zengyi Qin, Zengyi Qin, Zengyi Qin, Zengyi Qin">
-<title>Zengyi Qin | Tsinghua University</title>
+<title>Zengyi Qin | MIT</title>
 <meta charset="utf-8">
 </head>
 
