--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@ ul {
   line-height: 1.45;
 }
 
+a:link {
+  color:rgb(158, 3, 3);
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: rgb(158, 3, 3);
+  background-color: transparent;
+  text-decoration: none;
+}
+
 .section {max-width:1024px}
 </style>
 <meta name="msvalidate.01" content="F09EB454EEBF59AD68CB64C1A341AA9A" />
@@ -43,7 +55,7 @@ ul {
 </td>
 <td width="3%"></td>
 <td width="72%">
-<font size="5" face="Verdana"><b>&nbsp;Zengyi Qin <span lang="zh-cn">秦增益</span></b></font>
+<font size="5pt" face="Verdana"><b>&nbsp;Zengyi Qin <span lang="zh-cn">秦增益</span></b></font>
 <p><font face="Verdana">&nbsp; qinzy [at] mit.edu</font></p>
 </td>
 </tr>
@@ -51,7 +63,7 @@ ul {
 </div>
 
 <div class="section">
-<p><font face="Verdana">I am a first-year graduate student at MIT AeroAstro advised by Prof. Chuchu Fan. I obtained my B.E. degree of Electronic Engineering at Tsinghua University in 2020. I am passionate about safe and intelligent autonomous systems, as well as their intersection with robotics and machine learning. 
+<p><font face="Verdana">I am a first-year graduate student at <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a> advised by <a href="https://chuchu.mit.edu/">Prof. Chuchu Fan</a>. I obtained my B.E. degree of Electronic Engineering at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2020. I also did research in <a href="http://svl.stanford.edu/people/">Stanford Vision and Learning Lab</a> and <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a>. I am passionate about computer vision, robotics, safe and intelligent autonomous systems, and general artificial intelligence.
 </font></p>
 </div>
 
@@ -61,7 +73,7 @@ ul {
 <ul>
 <li>2019/06, I won the highest award of Beijing Challenge Cup (<span lang="zh-cn">首都大学生挑战杯特等奖</span>).</li>
 <li>2019/05, I won the highest award of Tsinghua Challenge Cup (<span lang="zh-cn">清华大学挑战杯特等奖</span>).</li>
-<li>2019/02, I was admitted to Stanford Undergraduate Visiting and Research Program (UGVR). I would be working in Stanford Vision and Learning Lab advised by Professor Silvio Savarese during Summer 2019.</li>
+<li>2019/02, I was admitted to Stanford Undergraduate Visiting and Research Program (UGVR). I will work in Stanford Vision and Learning Lab advised by Professor Silvio Savarese during Summer 2019.</li>
 </ul>  
 </font></p>
 </div>
@@ -84,7 +96,7 @@ ul {
   <p class="padding"><font face="Verdana">We study the multi-agent safe control problem where agents should avoid collisions to static obstacles and collisions with each other while reaching their goals. Our core idea is to learn the multi-agent control policy jointly with learning the control barrier functions as safety certificates.
   </p>
   <p class="padding"><font face="Verdana">
-  <a href="https://arxiv.org/abs/2101.05436">paper</a>
+  <a href="https://arxiv.org/abs/2101.05436">paper</a> | <a href="https://www.youtube.com/watch?v=k9ap_aUPNBk">video</a>
   </p></td>
   </tr>
   <tr><td><br></td></tr>
@@ -96,8 +108,9 @@ ul {
   <td width="75%" valign="top">
   <p class="padding"><font face="Verdana">
   <b>Learning fine-grained estimation of physiological states from coarse-grained labels by distribution restoration</b><br>
-  <b>Zengyi Qin</b>, Jiansheng Chen, Zhenyu Jiang, Xumin Yu, Chunhua Hu, Yu Ma, Suhua Miao and Rongsong Zhou<br>
-  <i> Scientific Reports, 2020</i><br>
+  <b>Zengyi Qin</b>, Jiansheng Chen, Zhenyu Jiang, Xumin Yu, Chunhua Hu, Yu Ma, Suhua Miao and Rongsong Zhou, <i> Scientific Reports, 2020</i><br>
+  </p>
+  <p class="padding"><font face="Verdana">Our method allows machine learning algorithms to perform fine-grained estimation of physiological states (e.g., sleep depth) even if the training labels are coarse-grained.
   </p>
   <p class="padding"><font face="Verdana">
   <a href="https://www.nature.com/articles/s41598-020-79007-5">paper</a>
@@ -182,7 +195,7 @@ ul {
 <h3><font face="Verdana">Education</h3>
 <p><font face="Verdana">
 <ul>
-<li>Tsinghua University, 2016 - 2020 <br>Bachelor of Engineering, Electronic Engineering <br> Advisor: Professor Jiansheng Chen</li>
+<li>Tsinghua University, 2016 - 2020 <br>Bachelor of Engineering, Electronic Engineering <br> Advisor: <a href="https://scholar.google.com/citations?user=A1gA9XIAAAAJ&hl=en">Prof. Jiansheng Chen</a></li>
 </ul>
 </font></p>
 </div>
