--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ a:visited {
 <p class="padding"><font face="Verdana">We study the multi-agent safe control problem where agents should avoid any collision while reaching their goals. Our method can scale up to an arbitrarily large number of agents (e.g., >1000 in our experiments) and achieve a 99-100% safety rate.
 </p>
 <p class="padding"><font face="Verdana">
-<a href="https://arxiv.org/abs/2101.05436">paper</a> | <a href="https://www.youtube.com/watch?v=k9ap_aUPNBk">video</a> | <a href="https://realm.mit.edu/blog/learning-safe-multi-agent-control-decentralized-neural-barrier-certificates">website</a>
+<a href="https://arxiv.org/abs/2101.05436">paper</a> | <a href="https://www.youtube.com/watch?v=k9ap_aUPNBk">video</a> | <a href="https://github.com/Zengyi-Qin/macbf">code</a> | <a href="https://realm.mit.edu/blog/learning-safe-multi-agent-control-decentralized-neural-barrier-certificates">website</a>
 </p></td>
 </tr>
 <tr><td><br></td></tr>
