--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@ a:visited {
 <td width="3%"></td>
 <td width="72%">
 <h2><font face="Verdana">Zengyi Qin 秦增益</h2>
+<!--
 <p><font face="Verdana"><a href="https://github.com/Zengyi-Qin/zengyi-qin.github.io/raw/master/CV_Zengyi.pdf">CV</a> | <a href="https://scholar.google.com/citations?user=lwwVd7sAAAAJ">Google Scholar</a> | <a href="https://github.com/Zengyi-Qin">Github</a></font></p>
+-->
 <p><font face="Verdana">qinzy [at] mit.edu</font></p>
 </td>
 </tr>
@@ -64,7 +66,7 @@ a:visited {
 </div>
 
 <div class="section">
-<p><font face="Verdana">I am a first-year graduate student at <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a> advised by <a href="https://chuchu.mit.edu/">Prof. Chuchu Fan</a>. I obtained my B.E. degree of Electronic Engineering at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. I am passionate about computer vision, robotics, safe and intelligent autonomous systems, and general artificial intelligence.
+<p><font face="Verdana">I am a first-year graduate student at <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a> advised by <a href="https://chuchu.mit.edu/">Prof. Chuchu Fan</a>. I obtained my B.E. degree of Electronic Engineering at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. <!--I am passionate about computer vision, robotics, safe and intelligent autonomous systems, and general artificial intelligence.-->
 </font></p>
 </div>
 
