--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ Chuchu Fan, <b>Zengyi Qin</b>, Umang Mathur, Qiang Ning, Sayan Mitra, and Mahesh
 <li>The highest award of Tsinghua Challenge Cup (<span lang="zh-cn">清华大学挑战杯特等奖</span>), 2019</li>
 <li>Comprehensive Excellence Scholarship, Tsinghua University, 2018</li>
 <li>The First Prize of Microsoft Imagine Cup, China Finals, 2018</li>
-<li>Chairman of Student association of Data Science and Machine Learning (DSML), Tsinghua University, 2018</li>
+<!--<li>Chairman of Student association of Data Science and Machine Learning (DSML), Tsinghua University, 2018</li>-->
 </ul>
 </font></p>
 </div>
