--- a/index.html
+++ b/index.html
@@ -256,14 +256,13 @@ Chuchu Fan, <b>Zengyi Qin</b>, Umang Mathur, Qiang Ning, Sayan Mitra, and Mahesh
 </table>
 </div>
 
-
 <div class="section">
 <h3><font face="Verdana">Honors</h3>
 <p><font face="Verdana">
 <ul>
 <li>MathWorks Fellowship, 2021</li>
-<li>Fellowship of Stanford Undergraduate Visiting and Research Program (UGVR), 2019</li>
-<li>The Award of Excellence in Microsoft Research Internship, 2019</li>
+<!--<li>Fellowship of Stanford Undergraduate Visiting and Research Program (UGVR), 2019</li>-->
+<!--<li>The Award of Excellence in Microsoft Research Internship, 2019</li>-->
 <li>The highest award of Beijing Challenge Cup (<span lang="zh-cn">首都大学生挑战杯特等奖</span>), 2019</li>
 <li>The highest award of Tsinghua Challenge Cup (<span lang="zh-cn">清华大学挑战杯特等奖</span>), 2019</li>
 <li>Comprehensive Excellence Scholarship, Tsinghua University, 2018</li>
