--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@ a:visited {
 <td width="3%"></td>
 <td width="72%">
 <h2><font face="Verdana">Zengyi Qin 秦增益</h2>
-<!--
 <p><font face="Verdana"><a href="https://github.com/Zengyi-Qin/zengyi-qin.github.io/raw/master/CV_Zengyi.pdf">CV</a> | <a href="https://scholar.google.com/citations?user=lwwVd7sAAAAJ">Google Scholar</a> | <a href="https://github.com/Zengyi-Qin">Github</a></font></p>
--->
 <p><font face="Verdana">qinzy [at] mit.edu</font></p>
 </td>
 </tr>
@@ -81,13 +79,11 @@ a:visited {
 <li><b>Tsinghua University</b>, 2016 - 2020 <br>Bachelor of Engineering, Electronic Engineering <br> Advisor: <a href="https://scholar.google.com/citations?user=A1gA9XIAAAAJ&hl=en">Prof. Jiansheng Chen</a></li>
 </ul>
 <ul>
-<!--
 <li><b>Stanford University</b>, Summer 2019 <br> Visiting researcher at <a href="http://svl.stanford.edu/people">Stanford Vision and Learning Lab (SVL)</a> <br> Advisor: <a href="http://svl.stanford.edu/people/">Prof. Silvio Savarese</a> and <a href="https://profiles.stanford.edu/fei-fei-li">Prof. Fei-Fei Li</a></li>
 </ul>
 <ul>
 <li><b>Microsoft Research Asia</b>, 2018 - 2019 <br> Research intern at <a href="https://www.microsoft.com/en-us/research/group/media-computing-group/">Media Computing Group</a> <br> Advisor: <a href="https://jingluw.github.io/">Dr. Jinglu Wang</a> and <a href="https://www.microsoft.com/en-us/research/people/yanlu/">Dr. Yan Lu</a>
 </ul>
--->
 </font></p>
 </div>
 
@@ -261,13 +257,13 @@ Chuchu Fan, <b>Zengyi Qin</b>, Umang Mathur, Qiang Ning, Sayan Mitra, and Mahesh
 <p><font face="Verdana">
 <ul>
 <li>MathWorks Fellowship, 2021</li>
-<!--<li>Fellowship of Stanford Undergraduate Visiting and Research Program (UGVR), 2019</li>-->
-<!--<li>The Award of Excellence in Microsoft Research Internship, 2019</li>-->
+<li>Fellowship of Stanford Undergraduate Visiting and Research Program (UGVR), 2019</li>
+<li>The Award of Excellence in Microsoft Research Internship, 2019</li>
 <li>The highest award of Beijing Challenge Cup (<span lang="zh-cn">首都大学生挑战杯特等奖</span>), 2019</li>
 <li>The highest award of Tsinghua Challenge Cup (<span lang="zh-cn">清华大学挑战杯特等奖</span>), 2019</li>
 <li>Comprehensive Excellence Scholarship, Tsinghua University, 2018</li>
 <li>The First Prize of Microsoft Imagine Cup, China Finals, 2018</li>
-<!--<li>Chairman of Student association of Data Science and Machine Learning (DSML), Tsinghua University, 2018</li>-->
+<li>Chairman of Student association of Data Science and Machine Learning (DSML), Tsinghua University, 2018</li>
 </ul>
 </font></p>
 </div>
