--- a/index.html
+++ b/index.html
@@ -93,6 +93,42 @@ a:visited {
 <table width="100%">
 
 
+<!-- Reactive -->
+<tr>
+<td width="25%" valign="top"><p><video autoplay="" class="center" loop="" muted="" playsinline="" style="display:block; margin: 0 auto;" width="250"><source src="figures/reactive.mp4" style="display: block; margin-left: auto; margin-right: auto; width:250px" type="video/mp4" /></video></p></td>
+<td width="75%" valign="top">
+<p class="padding"><font face="Verdana">
+<b>Reactive and Safe Road User Simulations using Neural Barrier Certificate</b><br>
+Yue Meng, <b>Zengyi Qin</b> and Chuchu Fan<br>
+<i>The International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2021</i><br>
+</p>
+<p class="padding"><font face="Verdana">Reactive and safe agent modelings are important for nowadays traffic simulator designs and safe planning applications. We propose a control barrier function-based method to simulate traffic agents that behave like humans or human controlled vehicles, which react to other road participants.
+</p>
+<p class="padding"><font face="Verdana">
+<a href="">paper</a> | <a href="https://realm.mit.edu/reactive-agent-models">website</a>
+</p></td>
+</tr>
+<tr><td><br></td></tr>
+
+
+<!-- DCRL -->
+<tr>
+<td width="25%" valign="top"><p><img src="figures/dcrl.png" alt="" style="border-style: none" width="250" align="top"></p></td>
+<td width="75%" valign="top">
+<p class="padding"><font face="Verdana">
+<b>Density Constrained Reinforcement Learning</b><br>
+<b>Zengyi Qin</b>, Yuxiao Chen and Chuchu Fan<br>
+<i>The International Conference on Machine Learning (<b>ICML</b>), 2021</i><br>
+</p>
+<p class="padding"><font face="Verdana">We study constrained reinforcement learning (CRL) from a novel perspective by setting constraints directly on state density functions, rather than the value functions considered by previous work. State density has a clear physical and mathematical interpretation, and is able to express a wide variety of constraints such as resource limits and safety requirements.
+</p>
+<p class="padding"><font face="Verdana">
+<a href="https://arxiv.org/abs/2106.12764">paper</a> | <a href="https://github.com/Zengyi-Qin/dcrl">code</a> | <a href="http://realm.mit.edu/blog/density-constrained-reinforcement-learning">website</a>
+</p></td>
+</tr>
+<tr><td><br></td></tr>
+
+
 <!-- MACBF -->
 <tr>
 <td width="25%" valign="top"><p><img src="figures/macbf.gif" alt="" style="border-style: none" width="250" align="top"></p></td>
@@ -210,7 +246,7 @@ Chuchu Fan, <b>Zengyi Qin</b>, Umang Mathur, Qiang Ning, Sayan Mitra, and Mahesh
 <p class="padding"><font face="Verdana">A general monocular 3D object detection framework that flexibly adapts to both fully and weakly supervised learning, which alleviates the need of extensive 3D labels and only requires ground truth 2D bounding boxes during training.
 </p>
 <p class="padding"><font face="Verdana">
-<a href="">paper</a>
+<a href="https://ieeexplore.ieee.org/document/9409679">paper</a>
 </p></td>
 </tr>
 <tr><td><br></td></tr>
