--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ a:visited {
 </div>
 
 <div class="section">
-<p><font face="Verdana">I am a first-year graduate student at <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a> advised by <a href="https://chuchu.mit.edu/">Prof. Chuchu Fan</a>. I obtained my B.E. degree of Electronic Engineering at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. <!--I am passionate about computer vision, robotics, safe and intelligent autonomous systems, and general artificial intelligence.-->
+<p><font face="Verdana">I am a second-year graduate student at <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a> advised by <a href="https://chuchu.mit.edu/">Prof. Chuchu Fan</a>. I obtained my B.E. degree of Electronic Engineering at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. <!--I am passionate about computer vision, robotics, safe and intelligent autonomous systems, and general artificial intelligence.-->
 </font></p>
 </div>
 
