--- a/index.html
+++ b/index.html
@@ -110,6 +110,42 @@ a:visited {
 <tr><td><br></td></tr>
 
 
+<!-- KETO -->
+<tr>
+<td width="25%" valign="top"><p><img src="figures/keto.gif" alt="" style="border-style: none" width="250" align="top"></p></td>
+<td width="75%" valign="top">
+<p class="padding"><font face="Verdana">
+<b>KETO: Learning Keypoint Representations for Tool Manipulation</b><br>
+<b>Zengyi Qin</b>, Kuan Fang, Yuke Zhu, Li Fei-Fei and Silvio Savarese<br>
+<i>The International Conference on Robotics and Automation (<b>ICRA</b>), 2020</i><br>
+</p>
+<p class="padding"><font face="Verdana">KETO is a framework for robots to manipulate unseen objects as tools to complete diverse tasks. We proposed a method to learn the keypoint representations of objects, which simplify the manipulation task and improve the generality to novel objects.
+</p>
+<p class="padding"><font face="Verdana">
+<a href="https://arxiv.org/abs/1910.11977">paper</a> | <a href="https://www.youtube.com/watch?v=hP2h53BHxE8">video</a> | <a href="https://sites.google.com/view/ke-to">website</a>
+</p></td>
+</tr>
+<tr><td><br></td></tr>
+
+
+<!-- CLBF -->
+<tr>
+<td width="25%" valign="top"><p><img src="figures/clbf.JPG" alt="" style="border-style: none" width="250" align="top"></p></td>
+<td width="75%" valign="top">
+<p class="padding"><font face="Verdana">
+<b>Safe Nonlinear Control Using Robust Neural Lyapunov-Barrier Functions</b><br>
+Charles Dawson, <b>Zengyi Qin</b>, Sicun Gao and Chuchu Fan<br>
+<i>The Conference on Robot Learning (<b>CoRL</b>), 2021</i><br>
+</p>
+<p class="padding"><font face="Verdana">Safety and stability are common requirements for robotic control systems. We propose a robust feedback method based on robust control Lyapunov barrier functions that generalize despite model uncertainty, and with safety and stability guarantee.
+</p>
+<p class="padding"><font face="Verdana">
+<a href="https://arxiv.org/pdf/2109.06697">paper</a>
+</p></td>
+</tr>
+<tr><td><br></td></tr>
+
+
 <!-- Reactive -->
 <tr>
 <td width="25%" valign="top"><p><video autoplay="" class="center" loop="" muted="" playsinline="" style="display:block; margin: 0 auto;" width="250"><source src="figures/reactive.mp4" style="display: block; margin-left: auto; margin-right: auto; width:250px" type="video/mp4" /></video></p></td>
@@ -215,24 +251,7 @@ Chuchu Fan, <b>Zengyi Qin</b>, Umang Mathur, Qiang Ning, Sayan Mitra, and Mahesh
 </p></td>
 </tr>
 <tr><td><br></td></tr>
-  
 
-<!-- KETO -->
-<tr>
-<td width="25%" valign="top"><p><img src="figures/keto.gif" alt="" style="border-style: none" width="250" align="top"></p></td>
-<td width="75%" valign="top">
-<p class="padding"><font face="Verdana">
-<b>KETO: Learning Keypoint Representations for Tool Manipulation</b><br>
-<b>Zengyi Qin</b>, Kuan Fang, Yuke Zhu, Li Fei-Fei and Silvio Savarese<br>
-<i>The International Conference on Robotics and Automation (<b>ICRA</b>), 2020</i><br>
-</p>
-<p class="padding"><font face="Verdana">KETO is a framework for robots to manipulate unseen objects as tools to complete diverse tasks. We proposed a method to learn the keypoint representations of objects, which simplify the manipulation task and improve the generality to novel objects.
-</p>
-<p class="padding"><font face="Verdana">
-<a href="https://arxiv.org/abs/1910.11977">paper</a> | <a href="https://www.youtube.com/watch?v=hP2h53BHxE8">video</a> | <a href="https://sites.google.com/view/ke-to">website</a>
-</p></td>
-</tr>
-<tr><td><br></td></tr>
 
 <!-- TLNET -->
 <tr>
