--- a/index.html
+++ b/index.html
@@ -315,10 +315,10 @@ Chuchu Fan, <b>Zengyi Qin</b>, Umang Mathur, Qiang Ning, Sayan Mitra, and Mahesh
 <li>MathWorks Fellowship, 2021</li>
 <li>Fellowship of Stanford Undergraduate Visiting and Research Program (UGVR), 2019</li>
 <li>The Award of Excellence in Microsoft Research Internship, 2019</li>
-<li>The highest award of Beijing Challenge Cup (<span lang="zh-cn">首都大学生挑战杯特等奖</span>), 2019</li>
-<li>The highest award of Tsinghua Challenge Cup (<span lang="zh-cn">清华大学挑战杯特等奖</span>), 2019</li>
+<li>The highest award of <a href="https://en.wikipedia.org/wiki/Challenge_Cup_Competition_of_Science_Achievement_in_China">Beijing Challenge Cup (<span lang="zh-cn">首都大学生挑战杯特等奖</span>)</a>, 2019</li>
+<li>The highest award of <a href="https://en.wikipedia.org/wiki/Challenge_Cup_Competition_of_Science_Achievement_in_China">Tsinghua Challenge Cup (<span lang="zh-cn">清华大学挑战杯特等奖</span>)</a>, 2019</li>
 <li>Comprehensive Excellence Scholarship, Tsinghua University, 2018</li>
-<li>The First Prize of Microsoft Imagine Cup, China Finals, 2018</li>
+<li>The First Prize of <a href="https://en.wikipedia.org/wiki/Imagine_Cup">Microsoft Imagine Cup</a>, China Finals, 2018</li>
 <li>Chairman of Student association of Data Science and Machine Learning (DSML), Tsinghua University, 2018</li>
 </ul>
 </font></p>
