--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ a:visited {
 <meta name="baidu-site-verification" content="Ctys5yXPkU" />
 <meta name="google-site-verification" content="9qnP6wIE8rh3TwMVrb84fWPqg9A_nDYEL3D6NGDjpwU" />
 <meta name="keywords" content="Zengyi Qin, Zengyi Qin, Zengyi Qin, Zengyi Qin, Zengyi Qin">
-<title>Zengyi Qin | MIT</title>
+<title>Zengyi (Zen) Qin | MIT</title>
 <meta charset="utf-8">
 </head>
 
@@ -55,7 +55,7 @@ a:visited {
 </td>
 <td width="3%"></td>
 <td width="72%">
-<h2><font face="Verdana">Zengyi Qin 秦增益</h2>
+<h2><font face="Verdana">Zengyi (Zen) Qin 秦增益</h2>
 <p><font face="Verdana"><a href="https://github.com/Zengyi-Qin/zengyi-qin.github.io/raw/master/CV_Zengyi.pdf">CV</a> | <a href="https://scholar.google.com/citations?user=lwwVd7sAAAAJ">Google Scholar</a> | <a href="https://github.com/Zengyi-Qin">Github</a></font></p>
 <p><font face="Verdana">qinzy [at] mit.edu</font></p>
 </td>
