--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@ a:visited {
 </div>
 
 <div class="section">
-<p><font face="Verdana">I am a second-year graduate student at <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a> advised by <a href="https://chuchu.mit.edu/">Prof. Chuchu Fan</a>. I obtained my B.E. degree of Electronic Engineering at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. I am particularly interested in the following topics:
+<p><font face="Verdana">I am a second-year graduate student at <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a>, with B.E. degree of Electronic Engineering at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. I am particularly interested in the following topics:
 </font></p>
-<ul>
+<ul><font face="Verdana">
 <li><b>Intelligent Medical Devices</b> <br> I believe the AI technology will transform the medical device industry. Since medical device is conservative and safety-critical, few novel AI technology is applied to medical devices compared with consumer electronics (e.g., smartphones). However, with the development of AI, and the improvement of its robustness and safety, medical devices will be integrated with more and more intelligence in the near future.</li>
-</ul>
+</font></ul>
 <ul>
-  <li><b>Robotics and 3D Computer Vision</b> <br> 3D computer vision (perception) is like the eyes of intelligent agents. It is the information flow from the physical world to the agent. The next step is to interpret the information, make decision, and take action to influence the physical world. It is an effect from the agent to the physical world. The whole thing is Robotics, which closes the perception-action loop between the physical world and the agent. </li>
+<li><b>Robotics and 3D Computer Vision</b> <br> 3D computer vision (perception) is like the eyes of intelligent agents. It is the information flow from the physical world to the agent. The next step is to interpret the information, make decision, and take action to influence the physical world. It is an effect from the agent to the physical world. The whole thing is Robotics, which closes the perception-action loop between the physical world and the agent. </li>
 </ul>
 </div>
 
