--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ a:visited {
 <li><b>Intelligent Medical Devices</b> <br> I believe the AI technology will transform the medical device industry. Since medical device is conservative and safety-critical, few novel AI technology is applied to medical devices compared with consumer electronics (e.g., smartphones). However, with the development of AI, and the improvement of its robustness and safety, medical devices will be integrated with more and more intelligence in the near future.</li>
 </font></ul>
 <ul><font face="Verdana">
-<li><b>Robotics and 3D Computer Vision</b> <br> 3D computer vision (perception) is like the eyes of intelligent agents. It is the information flow from the physical world to the agent. The next step is to interpret the information, make decision, and take action to influence the physical world. It is an effect from the agent to the physical world. The whole thing is Robotics, which closes the perception-action loop between the physical world and the agent. </li>
+<li><b>Human-level Perception and Robotics</b> <br> Perception and visual information processing is like the eyes of intelligent agents. It is the information flow from the physical world to the agent. The next step is to interpret the information, make decision, and take action to influence the physical world. It is an effect from the agent to the physical world. The whole thing is Robotics, which closes the perception-action loop between the physical world and the agent. </li>
 </font></ul>
 </div>
 
