--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ a:visited {
 <h3><font face="Verdana">Experiences</h3>
 <p><font face="Verdana">
 <ul>
-<li><b>Massachusetts Institute of Technology</b>, 2020 - now <br> Graduate student in <a href="https://realm.mit.edu/">Reliable Autonomous Systems Lab at MIT (REALM)</a> <br> Advisor: <a href="https://chuchu.mit.edu/">Prof. Chuchu Fan</a></li>
+<li><b>Massachusetts Institute of Technology</b>, 2020 - Jan 2022 <br> Graduate student in <a href="https://realm.mit.edu/">Reliable Autonomous Systems Lab at MIT (REALM)</a> <br> Advisor: <a href="https://chuchu.mit.edu/">Prof. Chuchu Fan</a></li>
 </ul>
 <ul>
 <li><b>Tsinghua University</b>, 2016 - 2020 <br>Bachelor of Engineering, Electronic Engineering <br> Advisor: <a href="https://scholar.google.com/citations?user=A1gA9XIAAAAJ&hl=en">Prof. Jiansheng Chen</a></li>
