--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ a:visited {
 </div>
 
 <div class="section">
-<p><font face="Verdana">I am PhD student at <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a>, with B.E. degree of Electronic Engineering at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. In my view, the research directions that will be very promising in the future include but not limited to:
+<p><font face="Verdana">I am PhD student at <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a>, with B.E. degree of Electronic Engineering at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. I believe the following research directions will have a huge practical impact in the future:
 </font></p>
 <ul><font face="Verdana">
 <li><b>Intelligent Medical Devices</b> <br> I believe the AI technology will transform the medical device industry. Since medical device is conservative and safety-critical, few novel AI technology is applied to medical devices compared with consumer electronics (e.g., smartphones). However, with the development of AI, and the improvement of its robustness and safety, medical devices will be integrated with more and more intelligence in the near future.</li>
