--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ a:visited {
 <b>Zengyi Qin</b>, Dawei Sun and Chuchu Fan<br>
 <i>IEEE Robotics and Automation Letters (<b>RA-L</b>), 2022</i><br>
 </p>
-<p class="padding"><font face="Verdana"> Learning control barrier functions (CBFs) for safe control of black-box systems. CBFs are a powerful tool to provide safety guarantee, but before this work, they cannot be directly applied to black box systems.
+<p class="padding"><font face="Verdana"> Learning control barrier functions (CBFs) for safe control of black-box systems. CBFs are a powerful tool to provide safety guarantee, but before this work, they cannot be directly applied to black box systems where their models are unavailable.
 </p>
 <p class="padding"><font face="Verdana">
 <a href="https://ieeexplore.ieee.org/document/9681233">paper</a> | <a href="https://github.com/MIT-REALM/sablas">code</a>
