--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ a:visited {
 </div>
 
 <div class="section">
-<p><font face="Verdana">I am PhD candidate at <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a>, advised by <a href="https://imes.mit.edu/research-staff-prof/brian-anthony/">Dr. Brian Anthony</a>. I received the S.M. degree at MIT, advised by <a href="https://chuchu.mit.edu/">Prof. Chuchu Fan</a>, and B.E. degree of Electronic Engineering at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>, advised by <a href="https://scholar.google.com/citations?user=A1gA9XIAAAAJ&hl=en">Prof. Jiansheng Chen</a>.
+<p><font face="Verdana">I am PhD candidate at <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a>, advised by <a href="https://imes.mit.edu/research-staff-prof/brian-anthony/">Dr. Brian Anthony</a>. I received the S.M. degree at MIT, advised by <a href="https://chuchu.mit.edu/">Prof. Chuchu Fan</a>, and B.E. degree of Electronic Engineering at Tsinghua University, advised by <a href="https://scholar.google.com/citations?user=A1gA9XIAAAAJ&hl=en">Prof. Jiansheng Chen</a>. I was fortunate to work as a visiting researcher at Stanford University, advised by <a href="https://svl.stanford.edu/people/">Prof. Fei-fei Li</a> and <a href="https://svl.stanford.edu/people/">Prof. Silvio Savarese</a>.
 </font></p>
 </div>
 
